3: UI fixes, compact footer, useful header, text-alignment, etc.

--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -7,7 +7,7 @@
     float: left;
 
     #logo {
-      width: 140px;
+      width: 120px;
     }
   }
 }
@@ -65,19 +65,46 @@ aside.page-sidebar > section {
 
 .main-nav {
   float: right;
-  margin-left: 50px;
-  margin-top: 50px;
+  margin-left: 30px;
+  margin-top: 20px;
+}
+
+@media (max-width: 900px) {
+  .nav {
+    >li {
+      >a {
+        font-size: 15px;
+      }
+    }
+  }
+
+  .header {
+    .header-main {
+      .social {
+        bottom: 20px;
+
+        li a {
+          font-size: 18px;
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: 767px) {
   .header {
     .header-main {
       padding-bottom: 0;
+
       .logo {
         float: none;
         #logo {
           width: 120px;
         }
+      }
+
+      .social {
+        bottom: 0;
       }
     }
   }
